app/client/module/navigation/navigation.import.less
button.btn-Google{
    background-color: lightgray;
    color: gray;
    background-image: url('/g_plus.png');
    background-repeat: no-repeat;
    background-position-x: 10px;
}

.navbar-wrapper {
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    z-index: 1001;
    
    .container{
        padding-right: 0;
        padding-left: 0;
    }
    
    .navbar{
        padding-right: 15px;
        padding-left: 15px;
    }
    
    @media (min-width: 768px) {
        margin-top: 20px;
        
        .container{
            padding-right: 15px;
            padding-left: 15px;
        }
        
        .navbar {
            padding-right: 5px;
            padding-left: 5px;
        }
    }
  
    .navbar-inverse .navbar-nav > li > a:focus{
      color: #FFF;
    }

    .navbar-brand{
        width: 250px;
        background-image: url('/images/bpt-horz-color.svg');
        background-size: contain;
        background-position: center;
        background-repeat: no-repeat;
        margin-right: 5px;
    }
}

